# calipy

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LICENSE.license  README.md  cali.py  de.caesar.bbo.CaliPy.desktop  environment.yml  environment_2.yml  requirements.txt  setup.cfg  setup.py
calipy/: __init__.py  __main__.py  main.py
calipy/calib/: CameraModel.py  PinholeCameraModel.py  PinholeCameraModelUtils.py  PinholeCameraSystem.py  SphericalCameraModel.py  __init__.py  utils.py
calipy/core/: BaseContext.py  CalibrationContext.py  RecordingContext.py  __init__.py  utils.py
calipy/detect/: ChArucoDetector.py  __init__.py
calipy/file/: CameraSystem.py  RecordingSession.py  __init__.py
calipy/imageio/: CamCommandoFormat.py
calipy/math/: __init__.py  utils.py
calipy/metaio/: CalipySystem.py  CameraSystem.py  RecordingSession.py  __init__.py
calipy/rawio/: CamCommandoFormat.py  Filters.py  __init__.py
calipy/ui/: CalibrationDock.py  CamerasDock.py  DetectionDock.py  FrameWindow.py  MainWindow.py  SourcesDock.py  TimelineDock.py  __init__.py
cmake/: FindPylon5.cmake
multiview/: __init__.py
multiview/blender/: __init__.py  getSelectionCoordinates.py  importCamera.py
multiview/calib/: ChArucoCalibration.py  ChArucoDetector.py  Pattern.py  PinholeCameraModel.py  SphericalCameraModel.py  __init__.py
multiview/core/: BaseContext.py  CalibrationContext.py  CameraSystemContext.py  Context.py  RecordingContext.py  __init__.py  utils.py
multiview/detect/: ChArucoDetector.py
multiview/file/: CameraSystem.py  KernelInputEvent.py  Path.py  RecordingSession.py  __init__.py  utils.py
multiview/geom/: Basis.py  Camera.py  CameraSystem.py  Coordinate.py  ImagePoint.py  Projection.py  Rotation.py  Transform.py  __init__.py  algorithms.py  analysis.py
multiview/imageio/: CamCommandoFormat.py  Filters.py  __init__.py
multiview/math/: utils.py
multiview/spherical/: __init__.py  convert.py  utils.py
multiview/ui/: AnalysisDock.py  CalibrationDock.py  CalibrationWindow.py  CameraSystemDock.py  CamerasDock.py  DetectionDock.py  FrameWindow.py  MainWindow.py  RecordingSessionDock.py  SourcesDock.py  TimeControlDock.py  TimelineDock.py  __init__.py
scripts/: mv-calib.py
src/camio/: Adapter.hpp  CMakeLists.txt  Camera.hpp  Frame.cpp  Frame.hpp  README.md  camctl.cpp  camio.cpp  camio.hpp  pycamio.cpp
src/camio/aptina/: AptinaAdapter.cpp  AptinaAdapter.hpp  AptinaCamera.cpp  AptinaCamera.hpp  AptinaFrame.cpp  AptinaFrame.hpp  aptina.hpp
src/camio/dummy/: DummyAdapter.cpp  DummyAdapter.hpp  DummyCamera.cpp  DummyCamera.hpp
src/camio/pixy/: PixyAdapter.cpp  PixyAdapter.hpp  PixyCamera.cpp  PixyCamera.hpp
src/camio/pylon/: PylonAdapter.cpp  PylonAdapter.hpp  PylonCamera.cpp  PylonCamera.hpp  PylonFrame.cpp  PylonFrame.hpp
tests/: geom_algorithms_test.py  geom_camera_test.py  geom_rebase_test.py  geom_rotation_test.py  geom_transform_test.py
tests/data/: test.cal.npz  test.coord.npy  test.pts.npy
