[metadata]
name = CaliPy
version = attr: calipy.VERSION
description = Camera Calibration Application
long_description = file: README.md, LICENSE
license = MPL 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = calipy
install_requires =
    pyqt5
    pyqtgraph
    numpy
    scipy
    opencv-contrib-python
    pyyaml
    imageio
    construct

[options.extras_require]
dev = pyinstaller
