[metadata]
name = CaliPy
version = attr: calipy.VERSION
description = Camera Calibration Application
long_description = file: README.md, LICENSE
author = Florian Franzen
license = MPL 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pyqt5
    pyqtgraph
    numpy
    scipy
    opencv-contrib-python
    pyyaml
    imageio
    imageio-ffmpeg
    construct

[options.extras_require]
dev = pyinstaller
