[metadata]
name = CaliPy
version = attr: calipy.VERSION
description = Camera Calibration Application
long_description = file: README.md, LICENSE
author = Florian Franzen
license = LGPL 2.1
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pyqt5
    pyqtgraph
    numpy
    scipy
    pyyaml
    imageio
    imageio-ffmpeg
    construct
    autograd
    joblib
    bbo-calibcam
    bbo-calibcamlib

[options.extras_require]
dev = pyinstaller
